--- a/snails.html
+++ b/snails.html
@@ -127,7 +127,7 @@ function DrawGame()
 
 function UpdateGame()
 {
-	if (gameState != GAME_OVER)
+	if (gameState != RACE_WON)
 	{
 		DrawGame();
 		checkFinish();
