--- a/snails.html
+++ b/snails.html
@@ -86,7 +86,7 @@ function OnLoad()
 			} else if (key == 86) { //'v'
 				snail2.Move();
 				checkFinish();
-			} else if (key == 83) { //'s'
+			} else if (key == 71) { //'g'
 				snail3.Move();
 				checkFinish();
 			}
