--- a/snails.html
+++ b/snails.html
@@ -9,7 +9,7 @@ var snail3Img = new Image();
 var winning1Img = new Image();
 var winning2Img = new Image();
 var winning3Img = new Image();
-var winnningImg; //which img to show	
+var winningImg; //which img to show	
 	
 var PLAYING = 0;
 var GAME_OVER = 1;
