--- a/snails.html
+++ b/snails.html
@@ -66,9 +66,9 @@ function OnLoad()
 {
 	//load images
 	backgroundImg.src = "image_track.png";
-	snail1Img.src = "snail1.png";
-	snail2Img.src = "snail2.png";
-	snail3Img.src = "snail3.png";
+	snail1Img.src = "moose 1.png";
+	snail2Img.src = "moose2.png";
+	snail3Img.src = "moose3.png";
 	
 	//load winning images
 	winning1Img.src = "winning1.png";
