--- a/snails.html
+++ b/snails.html
@@ -125,7 +125,7 @@ function DrawGame()
 	ctx = canvas.getContext("2d");
 	
 	//clobber the whole canvas
-	ctx.fillRect(0,0, canvas.width, canvas.height);
+	ctx.fillRect(0,0, backgroundImg.width, backgroundImg.height);
 	
 	ctx.drawImage(backgroundImg, 0, 0);
 	
