--- a/snails.html
+++ b/snails.html
@@ -124,7 +124,8 @@ function DrawGame()
 
 	ctx = canvas.getContext("2d");
 	
-	
+	//clobber the whole canvas
+	ctx.fillRect(0,0, backgoundImg.width, backgroundImg.height);
 	
 	ctx.drawImage(backgroundImg, 0, 0);
 	
@@ -193,7 +194,7 @@ function checkFinish()
 </script>
 <body onLoad="javascript:OnLoad();">
 <center>
-<canvas id="canvas" width="1000" height="400" style="background:#000000">
+<canvas id="canvas" width="799" height="300" style="background:#000000">
 </canvas>
 <button onClick = "ResetGame();">
 reset 
