--- a/snails.html
+++ b/snails.html
@@ -141,6 +141,7 @@ function DrawGame()
 	snail2.Draw(ctx);
 	snail3.Draw(ctx);
 	titleImg.Draw(ctx);
+	bannerImg.Draw(ctx);
 	
 	if (gameState == GAME_OVER)
 	{
