--- a/snails.html
+++ b/snails.html
@@ -74,7 +74,7 @@ function OnLoad()
 	
 	
 	//setup title screen and/or banner
-	titleImg.src = "TitleScreen.png"; 
+	//titleImg.src = "TitleScreen.png"; 
 	bannerImg.src = "Banner.png";
 	
 	//load winning images
