--- a/snails.html
+++ b/snails.html
@@ -134,6 +134,7 @@ function DrawGame()
 	//clobber the whole canvas
 	ctx.fillRect(0,0, canvas.width, canvas.height);
 	
+	ctx.drawImage(titleImg, 0, 0);
 	ctx.drawImage(bannerImg, 0, 0);
 	ctx.drawImage(backgroundImg, 0, 143);
 	
