--- a/snails.html
+++ b/snails.html
@@ -134,8 +134,8 @@ function DrawGame()
 	//clobber the whole canvas
 	ctx.fillRect(0,0, canvas.width, canvas.height);
 	
-	ctx.drawImage(titleImg, 0, 0);
-	//ctx.drawImage(bannerImg, 0, 0);
+	//ctx.drawImage(titleImg, 0, 0);
+	ctx.drawImage(bannerImg, 0, 0);
 	ctx.drawImage(backgroundImg, 0, 143);
 	
 	snail1.Draw(ctx);
