--- a/snails.html
+++ b/snails.html
@@ -147,6 +147,7 @@ function DrawGame()
 		if (winningImg!=null)
 		{
 			ctx.drawImage(500,150,winningImg);
+			window.setTimeout(location.replace("TitleScreen.html", 30000);
 		}
 	}
 	
