--- a/snails.html
+++ b/snails.html
@@ -10,7 +10,7 @@ var winning1Img = new Image();
 var winning2Img = new Image();
 var winning3Img = new Image();
 var winningImg; //which img to show
-var titleImg = new Image();
+//var titleImg = new Image();
 var bannerImg = new Image();
 	
 var PLAYING = 0;
@@ -74,7 +74,7 @@ function OnLoad()
 	
 	
 	//setup title screen and/or banner
-	titleImg.src = "TitleScreen.png"; 
+	//titleImg.src = "TitleScreen.png"; 
 	bannerImg.src = "Banner.png";
 	
 	//load winning images
