--- a/snails.html
+++ b/snails.html
@@ -146,7 +146,7 @@ function DrawGame()
 	{
 		if (winningImg!=null)
 		{
-			ctx.drawImage(500,150,winningImg);
+			ctx.drawImage(winningImg,500,150);
 		}
 	}
 	
