--- a/snails.html
+++ b/snails.html
@@ -144,7 +144,7 @@ function DrawGame()
 	
 	if (gameState == GAME_OVER)
 	{
-		if (winningImg!=null)
+		if (winningImg!== null)
 		{
 			ctx.drawImage(winningImg,500,150);
 		}
