--- a/snails.html
+++ b/snails.html
@@ -146,7 +146,7 @@ function DrawGame()
 	{
 		if (winningImg!= null)
 		{
-			ctx.drawImage(winningImg, canvas.Width/2 - winningImg.Width/2, 221);
+			ctx.drawImage(winningImg, canvas.width/2 - winningImg.width/2, 221);
 		}
 	}
 	
