--- a/snails.html
+++ b/snails.html
@@ -142,7 +142,7 @@ function DrawGame()
 	snail2.Draw(ctx);
 	snail3.Draw(ctx);
 	
-	if (gameState == GAME_OVER)
+	if (gameState == RACE_WON)
 	{
 		if (winningImg!= null)
 		{
