--- a/snails.html
+++ b/snails.html
@@ -147,7 +147,7 @@ function DrawGame()
 		if (winningImg!= null)
 		{
 			ctx.drawImage(winningImg, canvas.width/2 - winningImg.width/2, canvas.height/2 - winningImg.height/2);
-			window.setTimeout(location.replace("TitleScreen.html"),300000);
+			setTimeout(location.replace("TitleScreen.html"),30000);
 		}
 	}
 	
