--- a/snails.html
+++ b/snails.html
@@ -147,7 +147,7 @@ function DrawGame()
 		if (winningImg!= null)
 		{
 			ctx.drawImage(winningImg, canvas.width/2 - winningImg.width/2, canvas.height/2 - winningImg.height/2);
-			setTimeout(location.replace("TitleScreen.html"),300);
+			
 		}
 	}
 	
@@ -161,6 +161,10 @@ function UpdateGame()
 		snail2.Move();
 		DrawGame();
 		checkFinish();
+	}
+	else 
+	{
+		setTimeout(location.replace("TitleScreen.html"),30000);
 	}
 }
 
