--- a/snails.html
+++ b/snails.html
@@ -61,7 +61,7 @@ class Snail
 
 function reset()
 {
-   setTimeout(location.replace("TitleScreen.html"),30000);
+ 
 }
 
 function OnLoad()
@@ -172,7 +172,7 @@ function MovePlayer()
 
 function ResetGame()
 {
-	//location.replace("TitleScreen.html");
+	location.replace("TitleScreen.html");
 	//gameState = PLAYING;
 	//snail1.reset();
 	//snail2.reset();
