--- a/snails.html
+++ b/snails.html
@@ -17,6 +17,10 @@ var PLAYING = 0;
 var GAME_OVER = 1;
 var gameState = GAME_OVER;
 var RACE_WON = 2;
+	
+var SINGLE = 0;
+var MULTI = 1;
+var gameType = SINGLE;
 
 var snail1;
 var snail2;
@@ -155,14 +159,22 @@ function DrawGame()
 
 function UpdateGame()
 {
-	if (gameState != RACE_WON)
-	{
-		snail1.Move();
-		snail2.Move();
-		DrawGame();
-		checkFinish();
-	}
-		
+ if (gameState != RACE_WON)
+ {
+   if {gameType == SINGLE) 
+   {	
+	snail1.Move();
+	snail2.Move();
+	DrawGame();
+	checkFinish();
+   }
+   else if (gameType == MULTI)
+   {
+	snail1.Move();
+	DrawGame();
+	CheckFinish();
+   }
+ }		
 }
 
 function MovePlayer()
@@ -173,12 +185,6 @@ function MovePlayer()
 function ResetGame()
 {
 	location.replace("TitleScreen.html");
-	//gameState = PLAYING;
-	//snail1.reset();
-	//snail2.reset();
-	//snail3.reset();
-	
-	//audio.play();
 }
 
 function checkFinish()
