--- a/TitleScreen.html
+++ b/TitleScreen.html
@@ -9,7 +9,7 @@
 <img src ="TitleScreen.png">
 
 <h1>
-<a href = "snails.html">Start!</a>
+<a href = "snails.php?gameType=MULTI">Start!</a>
 </h1>
 
 </center>
