--- a/TitleScreen.html
+++ b/TitleScreen.html
@@ -2,6 +2,18 @@
 
 <head>
   
+  if (key == 90 || key == 122)
+  { 
+    location.replace("snails.php?gameType=MULTI")
+  }
+  else if (key == 86)
+  {
+    location.replace("snails.php?gameType=SINGLE")
+  }
+  else if (key == 49)
+  {
+    location.replace("help.html")
+  }
   
 </head>
 
