--- a/TitleScreen.html
+++ b/TitleScreen.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  
+<script language="javascript"> 
   if (key == 90 || key == 122)
   { 
     location.replace("snails.php?gameType=MULTI")
