--- a/TitleScreen.html
+++ b/TitleScreen.html
@@ -1,7 +1,17 @@
 <html>
 
 <head>
-<script language="javascript"> 
+</head>
+
+<body>
+
+<center>
+<img src ="TitleScreen.png">
+
+</center>
+ </body>
+ 
+  <script language="javascript"> 
   if (key == 90 || key == 122)
   { 
     location.replace("snails.php?gameType=MULTI")
@@ -14,13 +24,4 @@
   {
     location.replace("help.html")
   }
-  
-</head>
-
-<body>
-
-<center>
-<img src ="TitleScreen.png">
-
-</center>
 </html>
