--- a/TitleScreen.html
+++ b/TitleScreen.html
@@ -1,17 +1,6 @@
 <html>
-
 <head>
-</head>
-
-<body>
-
-<center>
-<img src ="TitleScreen.png">
-
-</center>
- </body>
- 
-  <script language="javascript"> 
+ <script> 
   if (key == 90 || key == 122)
   { 
     location.replace("snails.php?gameType=MULTI")
@@ -24,4 +13,15 @@
   {
     location.replace("help.html")
   }
+  </script> 
+</head>
+
+<body>
+
+<center>
+<img src ="TitleScreen.png">
+
+</center>
+ </body>
 </html>
+
