--- a/TitleScreen.html
+++ b/TitleScreen.html
@@ -1,6 +1,6 @@
 <html>
 <head>
- <script> 
+  <script language = "javascript"> 
   if (key == 90 || key == 122)
   { 
     location.replace("snails.php?gameType=MULTI")
@@ -13,7 +13,7 @@
   {
     location.replace("help.html")
   }
-  </script> 
+  </script>
 </head>
 
 <body>
