--- a/TitleScreen.html
+++ b/TitleScreen.html
@@ -1,5 +1,26 @@
 <html>
 <head>
+ <script language = "javascript"> 
+    window.onkeyup = function(e) {
+	
+		{
+			var key = e.keyCode ? e.keyCode : e.which;
+			
+         if (key == 90 || key == 122) 
+         { //'z'
+            location.replace("snail.php?gameType=MULTI");
+			} 
+         else if (key == 86) 
+         { //'v'
+				location.replace("snail.php?gameType=SINGLE");
+			}
+			else if (key == 49) 
+         {
+				location.replace("help.html");
+			}
+		}
+	}//end keyup
+ </script>
 </head>
 
 <body>
@@ -8,20 +29,6 @@
 <img src ="TitleScreen.png">
 
 </center>
-   <script language = "javascript"> 
-  if (key == 90 || key == 122)
-  { 
-    location.replace("snails.php?gameType=MULTI")
-  }
-  else if (key == 86)
-  {
-    location.replace("snails.php?gameType=SINGLE")
-  }
-  else if (key == 49)
-  {
-    location.replace("help.html")
-  }
-  </script>
  </body>
 </html>
 
