--- a/help.html
+++ b/help.html
@@ -1,5 +1,18 @@
 <html>
 <head>
+ <script language = "javascript">
+         
+  window.onkeyup = function(e) {
+{
+ var key = e.keyCode ? e.keyCode : e.which;
+         
+ if (key == 49)
+ {
+   location.replace("TitleScreen.html");
+ }
+}
+}
+</script>
 </head>
 
 <body>
