--- a/help.html
+++ b/help.html
@@ -2,7 +2,8 @@
 <head>
  <script language = "javascript">
          
-  window.onkeyup = function(e) {
+window.onkeyup = function(e) 
+{
 {
  var key = e.keyCode ? e.keyCode : e.which;
          
