--- a/TitleScreen.html
+++ b/TitleScreen.html
@@ -37,18 +37,18 @@ function SetSpeed(newspeed)
 </center>
 
 <button onCLick = "SetSpeed(SLOW)">
-button_slow.png
+<img src = "button_slow.png">
 </button>
 
 <center>
 <button onCLick = "SetSpeed(MEDIUM)">
-button_medium.png
+<img src ="button_medium.png">
 </button>
 </center>
 
 <right>
 <button onCLick = "SetSpeed(FAST)">
-button_fast.png
+<img src ="button_fast.png">
 </button>
 </right>
  </body>
