--- a/TitleScreen.html
+++ b/TitleScreen.html
@@ -36,21 +36,21 @@ function SetSpeed(newspeed)
 
 </center>
 
-<button onCLick = "SetSpeed(SLOW)">
+<button onCLick = "SetSpeed(SLOW);">
 <img src = "button_slow.png">
 </button>
 
-<center>
-<button onCLick = "SetSpeed(MEDIUM)">
+
+<button onCLick = "SetSpeed(MEDIUM);">
 <img src ="button_medium.png">
 </button>
-</center>
 
-<right>
-<button onCLick = "SetSpeed(FAST)">
+
+
+<button onCLick = "SetSpeed(FAST);">
 <img src ="button_fast.png">
 </button>
-</right>
+
  </body>
 </html>
 
