--- a/TitleScreen.html
+++ b/TitleScreen.html
@@ -2,7 +2,7 @@
 <head>
  <script language = "javascript"> 
 
-var speed = SLOW;
+var speed = 5;
 
 function SetSpeed(newspeed)
 {
@@ -36,18 +36,18 @@ function SetSpeed(newspeed)
 
 </center>
 
-<button onCLick = "SetSpeed(SLOW);">
+<button onCLick = "SetSpeed(5);">
 <img src = "button_slow.png">
 </button>
 
 
-<button onCLick = "SetSpeed(MEDIUM);">
+<button onCLick = "SetSpeed(8);">
 <img src ="button_medium.png">
 </button>
 
 
 
-<button onCLick = "SetSpeed(FAST);">
+<button onCLick = "SetSpeed(10);">
 <img src ="button_fast.png">
 </button>
 
