--- a/TitleScreen.html
+++ b/TitleScreen.html
@@ -40,11 +40,11 @@ function SetSpeed(newspeed)
 <img src = "button_slow.png">
 </button>
 
-
+<center>
 <button onCLick = "SetSpeed(8);">
 <img src ="button_medium.png">
 </button>
-
+</center>
 
 
 <button onCLick = "SetSpeed(10);">
