--- a/TitleScreen.html
+++ b/TitleScreen.html
@@ -35,16 +35,15 @@ function SetSpeed(newspeed)
 <img src ="TitleScreen.png">
 
 </center>
+ 
+<button onCLick = "SetSpeed(5);" src = "button_slow.png"/>
 
-<button onCLick = "SetSpeed(5);">
-<img src = "button_slow.png">
-</button>
 
-<center>
+
 <button onCLick = "SetSpeed(8);">
 <img src ="button_medium.png">
 </button>
-</center>
+
 
 
 <button onCLick = "SetSpeed(10);">
