--- a/TitleScreen.html
+++ b/TitleScreen.html
@@ -35,21 +35,23 @@ function SetSpeed(newspeed)
 <img src ="TitleScreen.png">
 
 </center>
- 
-<button onCLick = "SetSpeed(5);" src = "button_slow.png"/>
+ <center>
+<button onClick = "SetSpeed(5);">
+<img src = "button_slow.png">
+</button>
 
 
 
-<button onCLick = "SetSpeed(8);">
+<button onClick = "SetSpeed(8);">
 <img src ="button_medium.png">
 </button>
 
 
 
-<button onCLick = "SetSpeed(10);">
+<button onClick = "SetSpeed(10);">
 <img src ="button_fast.png">
 </button>
-
+</center>
  </body>
 </html>
 
