--- a/TitleScreen.html
+++ b/TitleScreen.html
@@ -2,6 +2,8 @@
 <head>
 <script language = "javascript"> 
 
+//changed the center for the body and moved the squggily braquet on the key up function down
+	
 var speed = 5;
 
 function SetSpeed(newspeed)
