--- a/snails.html
+++ b/snails.html
@@ -99,14 +99,14 @@ function OnLoad()
 		{
 			var key = e.keyCode ? e.keyCode : e.which;
 
-			if (key == 68) { //'d'
+			if (key == 71) { //'g'
 			} else if (key == 90 || key == 122) { //'z'
 				snail1.Move();
 				checkFinish();
 			} else if (key == 86) { //'v'
 				snail2.Move();
 				checkFinish();
-			} else if (key == 71) { //'g'
+			} else if (key == 68) { //'d'
 				snail3.Move();
 				checkFinish();
 			}
